--- a/src/app/(website)/globals.css
+++ b/src/app/(website)/globals.css
@@ -12,6 +12,17 @@
 @import "@radix-ui/colors/grass-dark.css";
 @import "@radix-ui/colors/orange-dark.css";
 @import "@radix-ui/colors/tomato-dark.css";
+@import "@radix-ui/colors/gray-alpha.css";
+@import "@radix-ui/colors/indigo-alpha.css";
+@import "@radix-ui/colors/grass-alpha.css";
+@import "@radix-ui/colors/orange-alpha.css";
+@import "@radix-ui/colors/tomato-alpha.css";
+@import "@radix-ui/colors/gray-dark-alpha.css";
+@import "@radix-ui/colors/indigo-dark-alpha.css";
+@import "@radix-ui/colors/grass-dark-alpha.css";
+@import "@radix-ui/colors/orange-dark-alpha.css";
+@import "@radix-ui/colors/tomato-dark-alpha.css";
+@import "@radix-ui/colors/white-alpha.css";
 
 :root {
   --radius: 8px;
