fix(navigation): Redo nav to make it ready for mobile compat

--- a/src/app/(website)/globals.css
+++ b/src/app/(website)/globals.css
@@ -35,6 +35,6 @@
 
 @layer base {
   body {
-    @apply bg-gray-background text-gray-text-high;
+    @apply bg-apee-black text-gray-text-high;
   }
 }
